tests/errors/wrong_val_57/e3.src
.IPPcode21

Exit int@50